🐛 [BUG] 알림 확인 창 수정